fix scrollbar

--- a/public/css/tooltip.css
+++ b/public/css/tooltip.css
@@ -143,7 +143,8 @@ p {
     padding-top: 5px;
     padding-bottom: 5px;
     height: 100px;
-    overflow-y: scroll;
+    /* overflow-y: scroll; */
+    overflow: hidden;
     position:relative;
 }
 .scroll_div{
